WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13088
REGRESSION(
r19761
-19779): Copy image no longer includes image address
https://bugs.webkit.org/show_bug.cgi?id=13088
Summary
REGRESSION(r19761-19779): Copy image no longer includes image address
Denis Ahrens
Reported
2007-03-15 13:49:19 PDT
When I copy an image to the clipboard with webkit the image is there but not the URL. When I do the same in Safari there is the image AND the URL. This is a REGRESSION!
Attachments
Declare types only once
(1.12 KB, patch)
2007-03-15 23:27 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Actually this one is better
(3.87 KB, patch)
2007-03-15 23:46 PDT
,
Beth Dakin
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2007-03-15 14:26:34 PDT
1. Load
http://webkit.org/images/icon-gold.png
2. In ToT, right click and choose "Copy Image" 3. Open a new tab/window and paste into the address bar - nothing 4. Repeat in Safari 2.0.4 - the image address is pasted fine. Viewing the clipboard with Clipboard Viewer (in the Developer Tools) shows a bunch of differences between what's copied from ToT and Safari 2.0.4. Both have identical contents for NeXT TIFF v4.0 pasteboard type. ToT includes a NeXT RTFD pasteboard type that shipping Safari does not. For everything else (WebURLsWithTitlesPboardType, Apple URL pasteboard type, 'url', 'urln', NSStringPboardType, NeXT plain ascii pasteboard type, Apple PICT pasteboard type), ToT has nothing while shipping Safari fills all those in.
Denis Ahrens
Comment 2
2007-03-15 19:08:54 PDT
in Webkit
r19761
it works like in Safari but in Webkit
r19779
it does not.
Matt Lilek
Comment 3
2007-03-15 19:18:48 PDT
Thanks for regressing that Denis!
http://trac.webkit.org/projects/webkit/changeset/19764
looks to me to be the culprit.
Mark Rowe (bdash)
Comment 4
2007-03-15 22:21:34 PDT
<
rdar://problem/5067927
>
Beth Dakin
Comment 5
2007-03-15 23:27:28 PDT
Created
attachment 13655
[details]
Declare types only once
Beth Dakin
Comment 6
2007-03-15 23:46:34 PDT
Created
attachment 13656
[details]
Actually this one is better
Beth Dakin
Comment 7
2007-03-15 23:51:36 PDT
Comment on
attachment 13656
[details]
Actually this one is better Geoff reviewed this.
Beth Dakin
Comment 8
2007-03-16 00:05:16 PDT
Fixed in
r20233
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug