        Reviewed by Geoff.

Fix for http://bugs.webkit.org/show_bug.cgi?id=13088 REGRESSION
        (r19761-19779): Copy image no longer includes image address
        (rdar://5067927)

        writeURL() does not need an isImage parameter. Now that it accepts
        the types as a parameter, we can just declare the appropriate image
        types within writeImage and send them to writeURL(). Also,
        declaring the types twice is what broke this.

        * platform/Pasteboard.h:
        * platform/mac/PasteboardMac.mm:
        (WebCore::Pasteboard::writeURL):
        (WebCore::Pasteboard::writeImage):


Canonical link: https://commits.webkit.org/17028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20233 268f45cc-cd09-0410-ab3c-d52691b4dbfc